# RF

./: .gitignore  CMakeLists.txt  README.md  experiment_full_adaptive.cpp  experiment_semi_adaptive.cpp
RF/: adaPerfectCF.h
nonlearnedfilter/: countingBloom.h
nonlearnedfilter/SSCF/: HashMudulator.h  SeesawCF.h  publicStruct.h
nonlearnedfilter/cuckoofilter/cuckoofilter/src/: MurmurHash3.h  RCF.h  adpPerfectCF.h  crc.h  max64table.h  max64table_b2.h  perfectCF.h  singletable.h
nonlearnedfilter/cuckoofilter/src/: crc.cpp  cuckoofilter copy.h  cuckoofilter.h  lchash.h  p
nonlearnedfilter/stackedfilter/: CountingBloomFilterLayer.h  StackedFilter.h
nonlearnedfilter/telescoping-filter/src/: constants.h
nonlearnedfilter/telescoping-filter/telescoping-filter/src/: taf.c  taf.h
util/: dataloader.h  genzipf.h  hashutil.h  key.h
